--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: ^4.0.4
   fl_chart: ^0.45.0
   charts_flutter: ^0.12.0
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
