--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^4.0.4
-  fl_chart: ^0.45.0
   charts_flutter: ^0.12.0
   flutter_swiper: ^1.1.6
+  fluro: ^2.0.3
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
